--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,61 @@
 <title>Laire</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/mainstyle.css') }}">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link href="https://fonts.googleapis.com/css?family=Varela&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="icon" href="{{ url_for('static',filename='images/tabIcon.png') }}">
 <style>
+  /* Three columns side by side */
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+  /* Display the columns below each other instead of side by side on small screens */
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+  /* Add some shadows to create a card effect */
+  .teamcard {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 25vw;
+    height: 67vh;
+    padding-top: 10vh;
+    transition: transform .2s; /* Animation */
+  }
+
+  .teamcard:hover{
+    transform: scale(1.04);
+  }
+
+  /* Some left and right padding inside the container */
+  .container {
+    padding: 0 16px;
+  }
+
+  /* Clear floats */
+  .container::after,
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  /* Vertically centers element within div*/
+  .vertical-center {
+    vertical-align: middle;
+  }
+
   body,
   h1,
   h2,
@@ -15,7 +65,7 @@
   h4,
   h5,
   h6 {
-    font-family: "Raleway", sans-serif
+    font-family: 'Varela', sans-serif;
   }
 
   body,
@@ -45,40 +95,29 @@
     min-height: 100%;
   }
 
-  /*FAQS*/
-  .faq_question {
-    margin: 0px;
-    padding: 0px 0px 5px 0px;
-    display: inline-block;
-    cursor: pointer;
-    font-weight: bold;
-  }
-
-  .faq_answer_container {
-    height: 0px;
-    overflow: hidden;
-    padding: 0px;
-  }
-
-
-  .zoom {
-    transition: transform .2s;
-    /* Animation */
-  }
-
-  .zoom:hover {
-    transform: scale(1.2);
-  }
-
   #webdev {
+    height: 100vh;
     background-position: center;
     background-size: cover;
     background-image: url("../static/images/webdev.jpg");
   }
+
   #social {
+    height: 100vh;
     background-position: center;
     background-size: cover;
-    background-image: url("../static/images/webdev.jpg");
+  }
+
+  #team {
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+  }
+
+  #contact {
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
   }
 </style>
 
@@ -91,7 +130,7 @@
   <div class="top">
     <div class="bar card" id="myNavbar" height="25px">
       <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:25px;border:0;"></a>
-      <!-- Right-sided navbar links -->
+      <!-- right navbar links -->
       <div class="right hide-small">
         <a href="#home" class="bar-item button">HOME</a>
         <a href="#about" class="bar-item button">ABOUT</a>
@@ -120,12 +159,13 @@
 
   <!-- Header with full-height image -->
   <header class="bgimg-1 display-container grayscale-min" id="home" height="500px">
-    <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium">Laire</span><br>
+    <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium"></span><br>
       <span class="large" style="position: relative; left: 20px;"></span>
-      <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:370px;top:100px;">Learn more</a>
-        <a href="#contact" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:500px;top:100px">Contact Now</a>
-      </p>
-
+      <center>
+        <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:27vw;top:10vh;">Learn more</a>
+          <a href="#contact" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:40vw;top:10vh">Contact Now</a>
+        </p>
+      </center>
     </div>
 
   </header>
@@ -134,7 +174,7 @@
   <div class="container white" style="padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
-        <h3>Web development and digital marketing powered by AI.</h3>
+        <h3 style="font-weight:bold;">Web development and digital marketing powered by AI.</h3>
         <p>Laire is a startup focused on helping local businesses grow
           <br>by using advanced tools to build websites and manage social media platforms.
         </p>
@@ -146,46 +186,85 @@
   </div>
 
   <!-- WEB DEVELOPMENT -->
-  <div class="container" style="padding:128px 150px" id="webdev">
+  <div class="display-container" style="padding:128px 150px" id="webdev">
     <div class="row-padding">
-      <div class="col s6" style="padding:160px 0px;">
-        <h3>WEB DEVELOPMENT</h3>
+      <div class="col s6" style="padding:20vh;">
+        <h3 style="font-weight:bold;">WEB DEVELOPMENT</h3>
       </div>
       <div class="col s6 offset-s6">
-          <p>
-              <br>
-              <br>
-              <br>
-              <br>Personalized websites with no templates tailored to your preferences.
-              <br>
-              <br>Powered by our AI engine, professional email client, and fully
-              personalized management and support from our team of experienced developers.
-          </p>
+        <p>
+          <br>
+          <br>
+          <br>
+          <br>Personalized websites with no templates tailored to your preferences.
+          <br>
+          <br>Powered by our AI engine, professional email client, and fully
+          personalized management and support from our team of experienced developers.
+        </p>
       </div>
     </div>
   </div>
   <!-- SOCIAL MEDIA -->
-  <div class="container blue" style="padding:128px 550px;" id="social">
-      <div class="container" style="padding:160px 0px;">
-        <h3>SOCIAL MEDIA</h3>
-      </div>
+  <div class="container blue" style="padding:128px;" id="social">
+    <div class="container vertical-center" style="padding:25vh;">
+      <center>
+        <h3 style="font-weight:bold;">SOCIAL MEDIA</h3>
+      </center>
+
+    </div>
   </div>
 
   <!-- OUR TEAM -->
-  
+
+
+  <div id="team" style="padding-top: 10vh">
+      <center>
+    <h3 style="font-weight:bold;">
+        OUR TEAM
+    </h3>
+</center>
+    <center>
+    <div class="row">
+      <div class="column" style="padding-top: 10vh;">
+        <div class="teamcard" onclick="location.href='/pranav';">
+        <center>  <img src="static/images/pranavPic.jpg" alt="Pranav" style="width:50%"></center>
+          <div class="container">
+            <h2>Pranav Addepalli</h2>
+            <p class="title">CEO & Founder</p>
+            <p>pranav@laire.org</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="column" style="padding-top: 10vh;">
+        <div class="teamcard" onclick="location.href='/sid';">
+        <center>  <img src="static/images/sidPic.jpg" alt="Sid" style="width:50%"> </center>
+          <div class="container">
+            <h2>Sid Rapolu</h2>
+            <p class="title">Lead Web Developer</p>
+            <p>sid@laire.org</p>
+          </div>
+        </div>
+      </div>
+      <div class="column" style="padding-top: 10vh;">
+        <div class="teamcard" onclick="location.href='/haneef';">
+          <center><img src="static/images/haneefPic.jpeg" alt="Haneef" style="width:50%;"></center>
+          <div class="container">
+            <h2>Haneef Khan</h2>
+            <p class="title">Back-End Developer</p>
+            <p>haneef@laire.org</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <center>
+  </div>
+  </div>
+
 
   <!-- CONTACT -->
   <div class="container light-grey" style="padding:128px 256px" id="contact">
-    <div class="row-padding">
-      <div class="col m6">
-        <h3>CONTACT</h3>
-        <p>Our mission is to bridge the gap between a startup and a business
-          <br>by improving the digital marketing through advanced web development.
-        </p>
-      </div>
-      <div class="col m6">
-      </div>
-    </div>
+
   </div>
 
   <!-- Footer -->
@@ -201,13 +280,7 @@
 
 
   <script>
-    // Modal Image Gallery
-    function onClick(element) {
-      document.getElementById("img01").src = element.src;
-      document.getElementById("modal01").style.display = "block";
-      var captionText = document.getElementById("caption");
-      captionText.innerHTML = element.alt;
-    }
+
 
 
     // Toggle between showing and hiding the sidebar when clicking the menu icon
@@ -229,6 +302,8 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
+
+
     //transparent to solid Navbar
     $(window).scroll(function() {
       if ($(window).scrollTop() >= 700) {
@@ -266,30 +341,7 @@
       });
     });
   </script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script>
-    $(document).ready(function() {
 
-      $('.faq_question').click(function() {
-
-        if ($(this).parent().is('.open')) {
-          $(this).closest('.faq').find('.faq_answer_container').animate({
-            'height': '0'
-          }, 500);
-          $(this).closest('.faq').removeClass('open');
-
-        } else {
-          var newHeight = $(this).closest('.faq').find('.faq_answer').height() + 'px';
-          $(this).closest('.faq').find('.faq_answer_container').animate({
-            'height': newHeight
-          }, 500);
-          $(this).closest('.faq').addClass('open');
-        }
-
-      });
-
-    });
-  </script>
 </body>
 
 </html>
