--- a/templates/home.html
+++ b/templates/home.html
@@ -71,6 +71,46 @@
         font-family: 'Varela', sans-serif;
     }
 
+    h2 {
+        border-right: solid 3px rgba(0, 255, 0, .75);
+        white-space: nowrap;
+        overflow: hidden;
+        font-family: 'Varela', sans-serif;
+        font-size: 28px;
+        color: rgba(255, 255, 255, .70);
+        margin: 0 auto;
+    }
+
+    /* Animation */
+    h2 {
+        animation: animated-text 1.5s steps(19, end) 1s 1 normal both,
+            animated-cursor 600ms steps(22, end) infinite;
+    }
+
+    /* text animation */
+
+    @keyframes animated-text {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 170vh;
+        }
+    }
+
+    /* cursor animations */
+
+    @keyframes animated-cursor {
+        from {
+            border-right-color: rgba(0, 0, 0, .75);
+        }
+
+        to {
+            border-right-color: transparent;
+        }
+    }
+
     body,
     html {
         height: 100%;
@@ -109,14 +149,14 @@
         height: 120vh;
         background-position: center;
         background-size: cover;
-        background-image: url("../static/images/webdev1.png");
+        background-color: #8fffa9;
     }
 
     #social {
         height: 100vh;
         background-position: center;
         background-size: cover;
-        background-color: #616161;
+        background-color: #fff78c;
     }
 
     #team {
@@ -130,6 +170,166 @@
         background-position: center;
         background-size: cover;
     }
+
+    /*Sentence*/
+    .sentence {
+        text-align: left;
+        color: #222;
+        font-size: 30px;
+    }
+
+    /*Wrapper*/
+    .wrapper {
+        margin: 100px auto;
+        position: relative;
+        width: 100%;
+    }
+
+    /*Vertical Sliding*/
+    .slidingVertical {
+        display: inline;
+        text-indent: 8px;
+    }
+
+    .slidingVertical span {
+        animation: topToBottom 7.5s linear infinite 0s;
+        -ms-animation: topToBottom 7.5s linear infinite 0s;
+        -webkit-animation: topToBottom 7.5s linear infinite 0s;
+        color: #dedede;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+    }
+
+    .slidingVertical span:nth-child(2) {
+        animation-delay: 2.5s;
+        -ms-animation-delay: 2.5s;
+        -webkit-animation-delay: 2.5s;
+    }
+
+    .slidingVertical span:nth-child(3) {
+        animation-delay: 5s;
+        -ms-animation-delay: 5s;
+        -webkit-animation-delay: 5s;
+    }
+
+
+    /*topToBottom Animation*/
+    @-moz-keyframes topToBottom {
+        0% {
+            opacity: 0;
+        }
+
+        5% {
+            opacity: 0;
+            -moz-transform: translateY(-50px);
+        }
+
+        10% {
+            opacity: 1;
+            -moz-transform: translateY(0px);
+        }
+
+        25% {
+            opacity: 1;
+            -moz-transform: translateY(0px);
+        }
+
+        30% {
+            opacity: 0;
+            -moz-transform: translateY(50px);
+        }
+
+        80% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 0;
+        }
+    }
+
+    @-webkit-keyframes topToBottom {
+        0% {
+            opacity: 0;
+        }
+
+        5% {
+            opacity: 0;
+            -webkit-transform: translateY(-50px);
+        }
+
+        10% {
+            opacity: 1;
+            -webkit-transform: translateY(0px);
+        }
+
+        25% {
+            opacity: 1;
+            -webkit-transform: translateY(0px);
+        }
+
+        30% {
+            opacity: 0;
+            -webkit-transform: translateY(50px);
+        }
+
+        80% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 0;
+        }
+    }
+
+    @-ms-keyframes topToBottom {
+        0% {
+            opacity: 0;
+        }
+
+        5% {
+            opacity: 0;
+            -ms-transform: translateY(-50px);
+        }
+
+        10% {
+            opacity: 1;
+            -ms-transform: translateY(0px);
+        }
+
+        25% {
+            opacity: 1;
+            -ms-transform: translateY(0px);
+        }
+
+        30% {
+            opacity: 0;
+            -ms-transform: translateY(50px);
+        }
+
+        80% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 0;
+        }
+    }
+
+    .button1{
+        display: inline-block;
+        padding: 8px 16px;
+        vertical-align: middle;
+        overflow: hidden;
+        text-decoration: none;
+        color: inherit;
+        background-color: inherit;
+        text-align: center;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+
 </style>
 
 <body>
@@ -173,12 +373,20 @@
         <div class="display-left text-white" style="padding:48px"><span class="xxlarge hide-large hide-medium"></span><br>
             <span class="large" style="position: relative; left: 20px;"></span>
             <center>
-                <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:27vw;top:10vh;">Learn more</a>
-                    <a href="#contact" class="button blue padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:40vw;top:10vh">Contact Now</a>
+                <p><a href="#about" class="button1 white padding-large large margin-top" style="position:relative;left:9vw;top:45vh;">Learn more</a>
+                    <a href="#contact" class="button1 blue padding-large large margin-top" style="position:relative;left:59vw;top:45vh">Contact Now</a>
                 </p>
             </center>
+            <section class="wrapper">
+                <h1 style="color:white;padding-left:40vh;"class="sentence">  We
+                    <div class="slidingVertical">
+                        <span>create.</span>
+                        <span>design.</span>
+                        <span>develop.</span>
+                    </div>
+                </h1>
+            </section>
         </div>
-
     </header>
 
     <!-- ABOUT COMPANY -->
@@ -197,34 +405,29 @@
     </div>
 
     <!-- WEB DEVELOPMENT -->
-    <div class="display-container" style="padding:128px 150px" id="webdev">
-        <div class="row-padding">
-            <div class="col s6" style="padding:20vh;">
-                <h3 style="font-weight:bold;">WEB DEVELOPMENT</h3>
-            </div>
-            <div class="col s6 offset-s6">
-                <p>
-                    <br>
-                    <br>
-                    <br>
-                    <br>Personalized websites with no templates tailored to your preferences.
-                    <br>
-                    <br>Powered by our AI engine, professional email client, and fully
-                    personalized management and support from our team of experienced developers.
+    <div class="container" id="webdev">
+        <div class="container vertical-center" style="padding-bottom:5vh;padding-top:15vh;">
+            <center>
+                <h2 style="font-weight:bold;font-size:16vh;">WEB DEVELOPMENT</h2>
+                <p style="font-size:4vh;">
+                    Personalized websites with no templates tailored to your preferences.
+                    <br>Powered by our AI engine, professional email client, and fully personalized
+                    <br>management and support from our team of experienced developers.
                 </p>
-            </div>
+            </center>
         </div>
+    </div>
     </div>
     <!-- SOCIAL MEDIA -->
     <div class="container" id="social">
         <div class="container vertical-center" style="padding-bottom:5vh;padding-top:15vh;">
             <center>
-                <h3 style="font-weight:bold;font-size:16vh;color:white;">SOCIAL MEDIA</h3>
+                <h3 style="font-weight:bold;font-size:16vh;">SOCIAL MEDIA</h3>
                 <img src="static/images/instaIcon.png" alt="instagram" style="width:20%;">
                 <img src="static/images/linkedinicon.png" alt="linkedin" style="width:20%;">
                 <img src="static/images/twitIcon.png" alt="twitter" style="width:20%;">
                 <img src="static/images/facebookIcon.png" alt="facebook" style="width:20%;">
-                </center>
+            </center>
         </div>
     </div>
 
@@ -277,8 +480,12 @@
 
 
     <!-- CONTACT -->
-    <div class="container light-grey" style="padding:128px 256px" id="contact">
-
+    <div class="container" id="contact">
+        <div class="container vertical-center" style="padding-bottom:5vh;padding-top:15vh;">
+            <center>
+                <h3 style="font-weight:bold;font-size:16vh;">CONTACT</h3>
+            </center>
+        </div>
     </div>
 
     <!-- Footer -->
