--- a/static/css/mstyle.css
+++ b/static/css/mstyle.css
@@ -1,7 +1,7 @@
 
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 16px;
     line-height: 1.6;
     overflow-x: hidden;
@@ -9,7 +9,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     margin-top: 0;
     margin-bottom: 20px;
