--- a/templates/home.html
+++ b/templates/home.html
@@ -7,10 +7,8 @@
     <link rel="icon" href="../static/images/tabIcon6.png">
     <title>Laire</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
     <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="../static/css/owl.carousel.css">
     <link type="text/css" rel="stylesheet" href="../static/css/owl.theme.default.css">
 
@@ -20,7 +18,7 @@
     <link type="text/css" rel="stylesheet" href="../static/css/mstyle.css">
 
     <meta name="description" content="Laire is a premier web development company. We cater to everyone from individuals to small businesses." />
-  	<meta name="keywords" content="web development, ashburn, virginia, page loading, initial, logo, web design, css animation" />
+    <meta name="keywords" content="web design, marketing, advertising, social media, web development, ashburn, virginia, brambleton, nova, page loading, initial, logo, web design, css animation" />
 
     <!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -29,6 +27,9 @@
 </head>
 
 <style>
+    h3{
+        style="font-family: 'Josefin Sans', sans-serif;"
+    }
     .arrow {
         text-align: center;
         margin: 8% 0;
@@ -59,18 +60,17 @@
         }
     }
 
-    .card{
+    .card {
         border-radius: 10vh;
     }
-
 </style>
 
 <body>
 
     <header id="home">
 
-        <div class="bg-img" style="background-image: url('../static/images/background4.jpg');">
-            <div class="overlay"></div>
+        <div class="bg-img" style="background-image: url('../static/images/homeBG6.jpg');">
+
         </div>
 
 
@@ -92,38 +92,36 @@
 
                 </div>
 
-                <ul class="main-nav nav navbar-nav navbar-right">
+                <ul style="font-family: 'Josefin Sans', sans-serif;" class="main-nav nav navbar-nav navbar-right">
                     <li class="active"><a href="#home">Home</a></li>
-                    <li class=""><a href="#about">About</a></li>
-                    <li class=""><a href="#service">Services</a></li>
+                    <li class="button"><a href="#about">About</a></li>
+                    <li class="button"><a href="#service">Services</a></li>
                     <!--<li class=""><a href="#portfolio">Portfolio</a></li>-->
-                    <li class=""><a href="#pricing">Pricing</a></li>
-                    <li class=""><a href="#team">Our Team</a></li>
-                    <li class=""><a href="#contact">Contact</a></li>
+                    <li class="button"><a href="#pricing">Pricing</a></li>
+                    <li class="button"><a href="#team">Our Team</a></li>
+                    <li class="button"><a href="#contact">Contact</a></li>
                 </ul>
 
             </div>
         </nav>
 
 
-        <div class="home-wrapper">
+        <div class="home-wrapper" style="font-family: 'Josefin Sans', sans-serif;">
             <div class="container">
                 <div class="row">
 
                     <div class="col-md-10 col-md-offset-1">
                         <div class="home-content" style="position:relative;bottom:12vh;">
                             <center>
-                                <img class="img-responsive" style="position:relative;top:20vh;"src="../static/images/laireLogoHead.png" alt="laireLogo">
-                            <p class="white-text"></p>
-                            <a href="#about">
-                            <button class="white-btn" style="color:#4a505c; border-radius:1vh;">Learn more!</button>
-                            <a href="#contact">
-                            <button class="main-btn" style="color:#4a505c; border-radius:1vh;">Contact us!</button>
-                            <center>
-                                <div class="arrow bounce" style="position:relative;top:9vh;">
-                                    <a class="fa fa-arrow-down fa-2x" href="#" style="color:white;"></a>
-                                </div>
-                            </center>
+                                <img class="img-responsive" style="position:relative;top:20vh;" src="../static/images/laireLogoHead.png" alt="laireLogo">
+                                <p class="white-text"></p>
+                                <button class="white-btn button" href="#about" style="color:#4a505c; border-radius:1vh;">Learn more</button>
+                                <button class="main-btn button" href="#contact" style="color:#4a505c; border-radius:1vh;">Contact us</button>
+                                <center>
+                                    <div class="arrow bounce" style="position:relative;top:2vh;">
+                                        <a class="fa fa-arrow-down fa-2x" href="#about" style="color:white;"></a>
+                                    </div>
+                                </center>
                         </div>
                     </div>
                 </div>
@@ -133,32 +131,32 @@
     </header>
 
 
-    <div id="about" class="section md-padding">
+    <div id="about" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="color:#5d606b;">About</h2>
+                    <h2 class="title" style="color:#5d606b; font-family: 'Josefin Sans', sans-serif;">About</h2>
                 </div>
 
 
                 <div class="col-md-6">
                     <div class="about">
                         <i class="fa fa-cogs"></i>
-                        <h3>Web Design</h3>
+                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Web Design</h3>
                         <p style="color: #aeb3c2">Fully personalized, custom websites built with premium development, creative design, and layout responsiveness.</p>
-                        <a href="#service" style="color: #5d606b">Read more</a>
+                        <a class="button" href="#service" style="color: #5d606b">Read more</a>
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <div class="about">
                         <i class="fa fa-mobile"></i>
-                        <h3>Digital Marketing</h3>
+                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Digital Marketing</h3>
                         <p style="color: #aeb3c2">Specialized digital marketing and social media management to build your brand and expand your online visibility.</p>
-                        <a href="#service" style="color: #5d606b">Read more</a>
+                        <a class="button" href="#service" style="color: #5d606b">Read more</a>
                     </div>
                 </div>
 
@@ -168,21 +166,21 @@
 
     </div>
 
-    <div id="service" class="section md-padding">
+    <div id="service" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="color:#5d606b;">What We Do</h2>
+                    <h2 class="title" style="font-family: 'Josefin Sans', sans-serif; color:#5d606b;">What We Do</h2>
                 </div>
 
 
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-paint-brush"></i>
-                        <h3>Fully Personalized</h3>
+                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Fully Personalized</h3>
                         <p>Professional websites to fit what <b>you</b> want. Support for business, personal, portfolio/photography, and e-commerce websites.</p>
                     </div>
                 </div>
@@ -191,7 +189,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-envelope"></i>
-                        <h3>Professional Email</h3>
+                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Professional Email</h3>
                         <p>Access to the full GSuite email and business management account <b> hosted on your domain </b> for powerful interaction.</p>
                     </div>
                 </div>
@@ -200,7 +198,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-lock"></i>
-                        <h3>Security</h3>
+                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Security</h3>
                         <p>Premier industry-standard server protection to protect your website from any type of attack, including Distributed Denial of Service attacks.</p>
                     </div>
                 </div>
@@ -209,8 +207,8 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-search"></i>
-                        <h3>Search Engine Optimization</h3>
-                        <p>Our cutting-edge SEO algorithm ensures top rankings on the Search Engine to attract more user traffic.</p>
+                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Search Engine Optimization</h3>
+                        <p>Our cutting-edge SEO algorithm ensures top rankings on the Search Engines to attract more user traffic and help your business expand.</p>
                     </div>
                 </div>
 
@@ -218,7 +216,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-line-chart"></i>
-                        <h3>Unique Content Model</h3>
+                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Unique Content Model</h3>
                         <p>A unique, triple threat content model for you to present only the <b>best</b> version of your company to the world and multiply your digital exposure.</p>
                     </div>
                 </div>
@@ -227,7 +225,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service">
                         <i class="fa fa-database"></i>
-                        <h3>Database Mapping</h3>
+                        <h3 style="font-family: 'Josefin Sans', sans-serif;">Database Mapping</h3>
                         <p>Our custom implementation of database management systems allow a significant performance increase in database queries.</p>
                     </div>
                 </div>
@@ -237,7 +235,7 @@
         </div>
 
     </div>
-<!--
+    <!--
     <div id="portfolio" class="section md-padding bg-grey">
 
         <div class="container">
@@ -296,17 +294,21 @@
 
     </div>
 -->
-    <div id="features" class="section md-padding bg-grey">
+    <div id="features" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
+
+        <div class="bg-img" style="background-image: url('../static/images/whyUsBG.png');">
+        </div>
 
         <div class="container">
 
             <div class="row">
 
-                <div class="col-md-6">
+                <div class="col-md-6" style="color:#2d353b;">
                     <div class="section-header">
-                        <h2 class="title" style="color:#5d606b;">Why Choose Us</h2>
+                        <h2 class="title" style="font-family: 'Josefin Sans', sans-serif;color:#2b2b2b;">Why Choose Us</h2>
                     </div>
-                    <p>We put tremendous effort into creating our websites and secure them <br>properly. We are always checking to see if the website is online and make sure that your business can expand as quickly as possible. Laire is here to help you turn your <b>startup</b> into a <b>business</b>.</p>
+                    <p>We put tremendous effort into creating our websites and secure them <br>properly. We are always checking to see if the website is online and make sure that your business can expand as quickly as possible. Laire is here to help
+                        you turn your <b>startup</b> into a <b>business</b>.</p>
                     <div class="feature">
                         <i class="fa fa-check"></i>
                         <p>Each website is built with <b>you</b> in mind - tailored to fit your <br>needs and wants.</p>
@@ -325,15 +327,13 @@
                     </div>
                 </div>
 
-                <img src="../static/images/instaIcon.png" alt="whyUs">
-
             </div>
 
         </div>
 
     </div>
 
-
+    <!--
     <div id="numbers" class="section sm-padding">
 
         <div class="bg-img" style="background-image: url('../static/images/background4.jpg');">
@@ -368,15 +368,15 @@
 
     </div>
 
-
-    <div id="pricing" class="section md-padding">
+-->
+    <div id="pricing" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="color:#5d606b;">Website Pricing</h2>
+                    <h2 class="title" style="color:#5d606b; font-family: 'Josefin Sans', sans-serif;">Website Pricing</h2>
                 </div>
 
 
@@ -385,7 +385,7 @@
                         <div class="price-head">
                             <span class="price-title" style="font-weight:bold;">Personal / Resume</span>
                             <div class="price">
-                                <h3>$15<span class="duration"></h3>
+                                <h3 style="font-family: 'Josefin Sans', sans-serif;">$15<span class="duration"></h3>
                             </div>
                         </div>
                         <ul class="price-content">
@@ -460,21 +460,21 @@
             <br>
             <br>
             <center>
-            <p>All prices are only for the website. <b>Domain, Media Management, and Security <br>will</b> add to the final price. Call or email for a quote and we’ll give you an <br>easy price based on what u need.
-            </p>
+                <p>All prices are only for the website. <b>Domain, Media Management, and Security <br>will</b> add to the final price. Call or email for a quote and we’ll give you an <br>easy price based on what u need.
+                </p>
             </center>
         </div>
 
     </div>
 
-    <div id="team" class="section md-padding">
+    <div id="team" class="section md-padding" style="font-family: 'Josefin Sans', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="color:#5d606b;">Our Team</h2>
+                    <h2 class="title" style="font-family: 'Josefin Sans', sans-serif;color:#5d606b;">Our Team</h2>
                 </div>
 
 
@@ -541,14 +541,14 @@
 
     </div>
 
-    <div id="contact" class="section md-padding">
+    <div id="contact" class="section md-padding" style="background-color:#ebebeb;font-family: 'Josefin Sans', sans-serif;">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="section-header text-center">
-                    <h2 class="title" style="color:#5d606b;">Get in touch</h2>
+                    <h2 class="title" style="font-family: 'Josefin Sans', sans-serif;color:#cfcfcf;">Get in touch</h2>
                 </div>
 
 
@@ -571,7 +571,7 @@
 
 
                 <div class="col-md-8 col-md-offset-2">
-                    <form class="contact-form">
+                    <form action="" class="contact-form">
                         <input type="text" class="input" placeholder="Name">
                         <input type="email" class="input" placeholder="Email">
                         <input type="text" class="input" placeholder="Subject">
@@ -607,7 +607,7 @@
 
 
                     <div class="footer-copyright">
-                        <p>Copyright © 2019 Laire. All Rights Reserved.</p>
+                        <p style="font-family: 'Josefin Sans', sans-serif;">Copyright © 2019 Laire. All Rights Reserved.</p>
                     </div>
 
                 </div>
